--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "express": "^5.1.0",
     "express-session": "^1.18.2",
     "uuid": "^13.0.0",
-    "xlsx": "^0.18.5"
+    "xlsx": "^0.18.5",
     "dotenv": "^17.2.2"
   }
 }
