--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "better-sqlite3": "^12.4.1",
     "body-parser": "^2.2.0",
+    "dotenv": "^17.2.2",
     "ejs": "^3.1.10",
     "express": "^5.1.0",
     "express-session": "^1.18.2",
+    "sqlite3": "^5.1.7",
     "uuid": "^13.0.0",
-    "xlsx": "^0.18.5",
-    "dotenv": "^17.2.2"
+    "xlsx": "^0.18.5"
   }
 }
